src/test/ui/parser/issue-2354-1.stderr
error: unexpected close delimiter: `}`
  --> $DIR/issue-2354-1.rs:3:24
   |
LL | static foo: isize = 2; } //~ ERROR unexpected close delimiter:
   |                        ^ unexpected close delimiter

error: aborting due to previous error

